[package]
name = "zoom_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version="0.9", features = ["map_physical_memory"] }
crossbeam-queue = { version = "0.3.11", default-features = false, features = ["alloc", "nightly"] }
futures = { version = "0.3.30", default-features = false, features = ["alloc"] }
linked_list_allocator = { version = "0.10.5", default-features = false }
pc-keyboard = "0.7.0"
pic8259 = "0.11.0"
smallvec = { version = "1.13.2", features = ["const_new", "const_generics", "union"] }
tracing = { version = "0.1.40", default-features = false, features = ["attributes"] }
uart_16550 = { version = "0.3.0", features = ["nightly"] }
volatile = "0.2.6"
x86_64 = "0.15.0"

[package.metadata.bootimage]
test-args = [
	"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
	"-display", "none"
]
run-args = [
	"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"
]
test-success-exit-code = 33
test-timeout = 30

[[test]]
name = "stack_overflow"
harness = false
