[package]
name = "zoom-os"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["kernel"]

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

