[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acpi = "5.0.0"
bootloader_api = "0.11.3"
chrono = { version = "0.4.37", default-features = false, features = ["alloc"] }
crossbeam-queue = { version = "0.3.11", default-features = false, features = ["alloc", "nightly"] }
embedded-graphics = "0.8.1"
futures = { version = "0.3.30", default-features = false, features = ["alloc"] }
itertools = { version = "0.12.1", default-features = false, features = ["use_alloc"] }
libm = "0.2.8"
linked_list_allocator = { version = "0.10.5", default-features = false }
num_enum = { version = "0.7.2", default-features = false }
pc-keyboard = "0.7.0"
pic8259 = "0.11.0"
raw-cpuid = "11.0.1"
smallvec = { version = "1.13.2", features = ["const_new", "const_generics", "union"] }
thiserror = { version = "1.0", package = "thiserror-core" , default-features = false }
tracing = { version = "0.1.40", default-features = false, features = ["attributes"] }
tracing-core = { version = "0.1.32", default-features = false }
uart_16550 = { version = "0.3.0", features = ["nightly"] }
volatile = "0.2.6"
x2apic = "0.4.3"
x86_64 = "0.15.0"

[package.metadata.bootimage]
test-args = [
	"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
	"-display", "none"
]
run-args = [
	"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"
]
test-success-exit-code = 33
test-timeout = 30

[[bin]]
name = "kernel"
test = false
bench = false

[[test]]
name = "stack_overflow"
harness = false

